# tcr-explorer

./: .dockerignore  .env.example  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: records_index.meta.json  unitcr_beta_index.meta.json  unitcr_beta_index.parquet
deploy/: DEPLOY.md  Dockerfile  README.md  build_iedb_index.py
examples/: hla_seed.csv  sample_input.fasta  tcr_seed.csv  vdjdb_seed.csv
scripts/: build_baseline.py  build_records_index.py  build_unitcr_index.py  release.sh  validate_config.py
servers/: batman_server.py  hla_server.py  iedb_server.py  mhc_server.py  structural_server.py  tcr_server.py  tempo_server.py  tier1_server.py  vdjdb_server.py
servers/baselines/: __init__.py  mixtcrpred.py  pmtnet_omni.py
servers/batman/: cache.py  pmhc.py  register.py  scorer.py  tcrdist.py  training_data.py
servers/tempo/: baseline.py  batcave.py  crossreact.py  scorer.py  tempo_binary.py  tsp.py
src/imgt_app/: annotator.py  api.py  ask.py  cdr_enricher.py  config.py  constant_regions.py  dossier.py  dossier_epitopes.py  dossier_models.py  fasta_parser.py  file_ingest.py  frontend.py  germline_db.py  germline_sets.py  input_router.py  kmer_aligner.py  mcp_clients.py  mcp_server.py  models.py  msa.py  nl_query.py  query_nl.py  reconstructor.py  records.py  records_build.py  search_index.py  similarity.py  tcr_align.py
src/tcr_explorer/: api.py  ask.py  bootstrap.py  cdr_enricher.py  config.py  constant_regions.py  d_regions.py  data_paths.py  data_sources.py  dossier.py  dossier_epitopes.py  dossier_models.py  frontend.py  germline_db.py  input_router.py  llm_client.py  mcp_server.py  models.py  msa.py  query_router.py  records.py  records_build.py  similarity.py  tcr_align.py  tcrdist_engine.py
src/tcr_explorer/data/germline/: ATTRIBUTION.md
src/tcr_explorer/data/germline/HUMAN/: C-region-motifs.tsv  IMGTgeneDLwarnings.txt  J-region-motifs.tsv  TRA.fasta  TRB.fasta  TRD.fasta  TRG.fasta  data-production-date.tsv  imgt-data.fasta
src/tcr_explorer/data/germline/MOUSE/: C-region-motifs.tsv  IMGTgeneDLwarnings.txt  TRA.fasta  TRB.fasta  TRD.fasta  TRG.fasta  data-production-date.tsv  imgt-data.fasta
src/tcr_explorer/data/tcrdist/: ATTRIBUTION.md
tests/: _smoke_check.py  conftest.py  test_align_api.py  test_annotator.py  test_api_prediction.py  test_ask.py  test_ask_api.py  test_assign_api.py  test_baseline_clients.py  test_batman_cache.py  test_batman_enrichment.py  test_batman_pmhc.py  test_batman_scorer.py  test_batman_server.py  test_batman_tcrdist.py  test_batman_training_data.py  test_bootstrap.py  test_caching.py  test_cdr_enricher.py  test_ci_workflows.py  test_config.py  test_constant_regions_human.py  test_data_paths.py  test_data_sources.py  test_dossier.py  test_dossier_api.py  test_dossier_epitopes.py  test_dossier_honesty.py  test_dossier_models.py  test_dossier_neighbours.py  test_download_wiring.py  test_env_config.py  test_frontend.py  test_germline_db.py  test_germline_sets.py  test_health.py  test_iedb_enrichment.py  test_ingest_vdjdb.py  test_input_router.py  test_kmer_aligner.py  (+49 more)
tests/fixtures/: records_fixture.parquet  unitcr_tiny.parquet
tests/fixtures/reconstruction/: mouse_paired_tcrs.tsv
tests/fixtures/records/: iedb_tcr.csv  mcpas.csv  tcr3d_chain.tsv  tcr3d_complexes.tsv  vdjdb_slim.txt
