[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr-explorer"
version = "1.0.0"
description = "Distributed API for IMGT, VDJdb, IEDB, and IPD-MHC search"
requires-python = ">=3.10"

[project.scripts]
tcr-explorer-mcp = "tcr_explorer.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tcr_explorer = [
    "data/*.parquet",
    "data/*.json",
    "data/germline/*/*.fasta",
    "data/germline/*/*.tsv",
    "data/germline/*/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
