[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr-explorer"
version = "1.0.0"
description = "Federated TCR analysis: records retrieval, germline allele assignment, reconstruction, dossiers, and similarity, over a web UI, REST API, and MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2",
    "starlette>=0.40,<0.48",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "biopython==1.85",
    "tidytcells>=2.0.0",
    "platformdirs>=4",
    "stitchr>=1.3",
]

[project.optional-dependencies]
ui-legacy = ["streamlit>=1.35.0"]

[project.scripts]
tcr-explorer-mcp = "tcr_explorer.mcp_server:main"
tcr-explorer-refresh = "tcr_explorer.bootstrap:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tcr_explorer = [
    "data/*.json",
    "data/germline/*.md",
    "data/germline/*/*.fasta",
    "data/germline/*/*.tsv",
    "data/germline/*/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
