[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr-explorer"
version = "0.2.1"
description = "Federated TCR analysis: records retrieval, germline allele assignment, reconstruction, dossiers, and similarity, over a web UI, REST API, and MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kilian Maire" }]
keywords = [
    "TCR", "T-cell-receptor", "immunology", "AIRR", "VDJ", "germline",
    "IMGT", "VDJdb", "IEDB", "McPAS", "bioinformatics", "MCP",
    "immune-repertoire", "epitope",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "starlette>=0.40,<0.48",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "biopython==1.85",
    "tidytcells>=2.0.0",
    "platformdirs>=4",
    "stitchr>=1.3",
]

[project.optional-dependencies]
ui-legacy = ["streamlit>=1.35.0"]
# Authoritative tcrdist similarity scoring. `pwseqdist` is the same distance
# engine tcrdist3 uses; the germline CDR loops come from the vendored reference
# table (data/tcrdist/). Without this extra, similarity falls back to the bundled
# BLOSUM CDR3 distance and says so in a warning.
tcrdist = ["pwseqdist>=0.6"]

[project.scripts]
tcr-explorer-mcp = "tcr_explorer.mcp_server:main"
tcr-explorer-refresh = "tcr_explorer.bootstrap:main"

[project.urls]
Homepage = "https://github.com/KilianMaire/tcr-explorer"
Issues = "https://github.com/KilianMaire/tcr-explorer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tcr_explorer = [
    "py.typed",
    "data/*.json",
    "data/germline/*.md",
    "data/germline/*/*.fasta",
    "data/germline/*/*.tsv",
    "data/germline/*/*.txt",
    "data/tcrdist/*.tsv",
    "data/tcrdist/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
